--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 __pycache__/*
 .vscode/*
+Wireshark/Latex/sources/main.aux
+Wireshark/Latex/sources/main.lof
+Wireshark/Latex/sources/main.log
+Wireshark/Latex/sources/main.out
+Wireshark/Latex/sources/main.synctex.gz
+Wireshark/Latex/sources/main.tex.bak
+Wireshark/Latex/sources/main.toc
+Wireshark/Latex/sources/p1.tex.bak
+Wireshark/Latex/sources/p2.tex.bak
+Wireshark/Latex/sources/main.aux
+Wireshark/Latex/sources/main.lof
+Wireshark/Latex/sources/main.log
+Wireshark/Latex/sources/main.out
+Wireshark/Latex/sources/main.synctex.gz
+Wireshark/Latex/sources/main.tex.bak
+Wireshark/Latex/sources/main.toc
+Wireshark/Latex/sources/p1.tex.bak
