part of p2 wireshark

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,12 @@ Wireshark/Latex/sources/main.synctex.gz
 Wireshark/Latex/sources/main.tex.bak
 Wireshark/Latex/sources/main.toc
 Wireshark/Latex/sources/p1.tex.bak
+Wireshark/Latex/sources/cover.tex.bak
+Wireshark/Latex/sources/header.tex.bak
+Wireshark/Latex/sources/main.bcf
+Wireshark/Latex/sources/main.lot
+Wireshark/Latex/sources/main.maf
+Wireshark/Latex/sources/main.mtc
+Wireshark/Latex/sources/main.mtc0
+Wireshark/Latex/sources/main.run.xml
+Wireshark/Latex/sources/refs.bib.bak
