part of p3 wireshark

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ Wireshark/Latex/sources/main.mtc
 Wireshark/Latex/sources/main.mtc0
 Wireshark/Latex/sources/main.run.xml
 Wireshark/Latex/sources/refs.bib.bak
+Wireshark/Latex/sources/main.bbl
+Wireshark/Latex/sources/main.blg
+Wireshark/Latex/sources/p3.tex.bak
