--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ Wireshark/Latex/sources/refs.bib.bak
 Wireshark/Latex/sources/main.bbl
 Wireshark/Latex/sources/main.blg
 Wireshark/Latex/sources/p3.tex.bak
+Wireshark/Latex/sources/p3.log
