--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ Wireshark/Latex/sources/main.bbl
 Wireshark/Latex/sources/main.blg
 Wireshark/Latex/sources/p3.tex.bak
 Wireshark/Latex/sources/p3.log
+Wireshark/Latex/sources/p4.tex.bak
+Wireshark/Latex/sources/p5.tex.bak
+Wireshark/Latex/sources/p5.log
