--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-__pycache__/*
-.vscode/*
+__pycache__/
+.vscode/
 Wireshark/Latex/sources/main.aux
 Wireshark/Latex/sources/main.lof
 Wireshark/Latex/sources/main.log
