--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ Wireshark/Latex/sources/p3.log
 Wireshark/Latex/sources/p4.tex.bak
 Wireshark/Latex/sources/p5.tex.bak
 Wireshark/Latex/sources/p5.log
+Socket-Place/report/sources/cover.tex.bak
+Socket-Place/report/sources/header.tex.bak
+Socket-Place/report/sources/main.aux
+Socket-Place/report/sources/main.maf
+Socket-Place/report/sources/main.mtc
+Socket-Place/report/sources/main.mtc0
+Socket-Place/report/sources/main.out
+Socket-Place/report/sources/main.synctex.gz
+Socket-Place/report/sources/main.tex.bak
