continue report, sleep...

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ Socket-Place/report/sources/main.mtc0
 Socket-Place/report/sources/main.out
 Socket-Place/report/sources/main.synctex.gz
 Socket-Place/report/sources/main.tex.bak
+Socket-Place/report/sources/main.bcf
+Socket-Place/report/sources/main.lof
+Socket-Place/report/sources/main.lot
+Socket-Place/report/sources/main.toc
+Socket-Place/report/sources/protocol.tex.bak
+Socket-Place/report/sources/main.run.xml
