--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,11 @@ Socket-Place/report/sources/main.lot
 Socket-Place/report/sources/main.toc
 Socket-Place/report/sources/protocol.tex.bak
 Socket-Place/report/sources/main.run.xml
+Socket-Place/report/figures/instructions/client_first_gui.png
+Socket-Place/report/sources/environment.tex.bak
+Socket-Place/report/sources/instructions.tex.bak
+Socket-Place/report/sources/jobs.tex.bak
+Socket-Place/report/sources/main.bbl
+Socket-Place/report/sources/main.blg
+Socket-Place/report/sources/overview-description.tex.bak
+Socket-Place/report/sources/refs.bib.bak
