update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,33 @@ Socket-Place/report/sources/main.bbl
 Socket-Place/report/sources/main.blg
 Socket-Place/report/sources/overview-description.tex.bak
 Socket-Place/report/sources/refs.bib.bak
+Socket-Email/TelePC/__pycache__/app_process_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/directory_tree_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/entrance_ui.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/live_screen_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/keylogger_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/mac_address_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/main_ui.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/app_process_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/app_process_client.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/app_process_server.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/directory_tree_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/directory_tree_client.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/directory_tree_server.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/entrance_ui.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/entrance_ui.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/keylogger_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/keylogger_client.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/keylogger_server.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/live_screen_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/live_screen_client.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/live_screen_server.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/mac_address_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/mac_address_client.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/mac_address_server.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/main_ui.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/main_ui.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-310.pyc
+Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-37.pyc
+Socket-Email/TelePC/__pycache__/shutdown_logout_server.cpython-37.pyc
