--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ Socket-Email/TelePC/__pycache__/main_ui.cpython-37.pyc
 Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-310.pyc
 Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-37.pyc
 Socket-Email/TelePC/__pycache__/shutdown_logout_server.cpython-37.pyc
+Socket-Email/server_control/video.avi
