begin to write report

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,16 @@ Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-310.pyc
 Socket-Email/TelePC/__pycache__/shutdown_logout_client.cpython-37.pyc
 Socket-Email/TelePC/__pycache__/shutdown_logout_server.cpython-37.pyc
 Socket-Email/server_control/video.avi
+Socket-Email/documentation/latex/cover.tex.bak
+Socket-Email/documentation/latex/introduction.tex.bak
+Socket-Email/documentation/latex/syntax.tex.bak
+Socket-Email/documentation/main.aux
+Socket-Email/documentation/main.lof
+Socket-Email/documentation/main.lot
+Socket-Email/documentation/main.maf
+Socket-Email/documentation/main.mtc
+Socket-Email/documentation/main.mtc0
+Socket-Email/documentation/main.out
+Socket-Email/documentation/main.synctex.gz
+Socket-Email/documentation/main.tex.bak
+Socket-Email/documentation/main.toc
