--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ Socket-Email/documentation/main.out
 Socket-Email/documentation/main.synctex.gz
 Socket-Email/documentation/main.tex.bak
 Socket-Email/documentation/main.toc
+Socket-Email/documentation/latex/documentation.tex.bak
