--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,5 @@ Socket-Email/documentation/main.synctex.gz
 Socket-Email/documentation/main.tex.bak
 Socket-Email/documentation/main.toc
 Socket-Email/documentation/latex/documentation.tex.bak
+Socket-Email/documentation/latex/handle.tex.bak
+Socket-Email/documentation/latex/parser.tex.bak
