--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ Socket-Email/documentation/main.toc
 Socket-Email/documentation/latex/documentation.tex.bak
 Socket-Email/documentation/latex/handle.tex.bak
 Socket-Email/documentation/latex/parser.tex.bak
+Socket-Email/documentation/latex/webcam.tex.bak
