add link to demo video

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ Socket-Email/documentation/latex/documentation.tex.bak
 Socket-Email/documentation/latex/handle.tex.bak
 Socket-Email/documentation/latex/parser.tex.bak
 Socket-Email/documentation/latex/webcam.tex.bak
+Socket-Email/demo/demo.mp4
+*.prproj
